# DeepBlue-CppProj

./: CMakeLists.txt  README.md
main/: do_quiz.cpp
proj1/: LICENSE
proj1/include/: quiz_generator.h
proj1/main/: do_quiz.cpp
proj2/: CMakeLists.txt  README.md
proj2/include/: num_calculator.h
proj2/lib/: LongNumAdding
proj2/main/: main.cpp
proj2/src/: num_calculator.cpp
src/: quiz_generator.cpp
test/: runQuiz
